<resources>
    <string name="app_name">Little Tasks</string>
    <string name="new_user_signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="welcome_to">Welcome to</string>
    <string name="email_example">abc@example.com</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="plans">Plans</string>
    <!-- Theme -->
    <!-- Needed -->
    <string name="none_display">There are no items to display</string>
    <string name="add_new_object">Add New Object</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="do_you_want_to_exit">Do you want to Exit ?</string>
    <string name="about_app">The application was designed by "Flat Code"</string>
    <!-- Pages -->
    <string name="favorites">Favorites</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="all">All</string>
    <string name="add_new_task">Add New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_plan">Edit Plan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_object">Edit Object</string>
    <string name="objects_plan">Objects Plan</string>
    <string name="add_object_to_plan">Add Object To Plan</string>
    <string name="objects">Objects</string>
    <string name="do_you_want_to_delete_the">Do you want to delete the</string>
    <string name="username">Username</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_new_plan">Add New Plan</string>
    <string name="task_name">Task Name</string>
    <string name="points">Points</string>
    <string name="add">ADD</string>
    <string name="done">DONE</string>
    <string name="plan_name">Plan Name</string>
    <string name="allPoints">All : </string>
    <string name="availablePoints">AV : </string>
    <string name="level">Level : </string>
    <string name="object_name">Object Name</string>
    <string name="av_points">AV Points</string>
    <string name="add_">Add</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="the_plan">The Plan</string>
    <string name="zero">0</string>
    <string name="add_object">Add Object</string>
    <string name="add_category">Add Category</string>
    <string name="add_task">Add Task</string>
    <string name="add_plan">Add Plan</string>
    <string name="search">Search Here</string>
    <string name="please_wait">Please wait…</string>
    <string name="password_hint">********</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="all_tasks">All tasks</string>
    <string name="tasks_not_started">Didn\'t start with it</string>
    <string name="tasks_started">I started with it</string>
    <string name="tasks_done">I\'m done with it</string>
    <string name="crop_image">Crop Image</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>