<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="12sp"
            android:paddingVertical="5sp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button6"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_note"
                android:drawablePadding="10sp"
                android:drawableTint="@color/black"
                android:hint="@string/task_name"
                android:inputType="textPersonName|textCapWords"
                android:padding="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PointsTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/PointsEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button6"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="10sp"
                android:drawableTint="@color/black"
                android:hint="@string/points"
                android:inputType="number|phone"
                android:padding="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:paddingHorizontal="12sp"
            android:paddingVertical="5sp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:paddingHorizontal="12sp"
            android:paddingVertical="5sp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginBottom="10sp"
            android:background="@color/white" />

    </LinearLayout>

</layout>