<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@color/image_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="2dp"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="?colorError"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5sp">

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="2dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/level"
                        android:textColor="?colorError"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="2dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/availablePoints"
                        android:textColor="?colorError"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/availablePoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="2dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/allPoints"
                        android:textColor="?colorError"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="?colorError"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>