<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorOnBackground"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_page_event" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/view"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="5sp">

                    <include
                        android:id="@+id/filter"
                        layout="@layout/item_switch_filter" />

                    <include
                        android:id="@+id/add"
                        layout="@layout/item_add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5sp"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:reverseLayout="true"
                            app:stackFromEnd="true"
                            tools:listitem="@layout/item_task" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerViewReverse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical"
                            android:visibility="gone"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_task" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_above="@+id/linearPoints"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/linearPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?background"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/availablePoints"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/av"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/level"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/level"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/allPoints"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/allPoints"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:indeterminateDrawable="@drawable/progress_bar_2"
                android:visibility="visible" />

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20sp"
                android:gravity="center"
                android:text="@string/none_display"
                android:textColor="?colorError"
                android:textSize="32sp"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>

</layout>